Bug 1881586 - Do not re-initialize system module loader after unload. r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D205029